test/corpus/regressions.txt
================================================================================
Assignment precedence
================================================================================

a := b | c

--------------------------------------------------------------------------------

(source_file
  (assignment_expression
    (identifier)
    (operator)
    (binary_expression
      (identifier)
      (operator)
      (identifier))))
